# spdcomplexity

./: CMakeLists.txt
data/: Parser.cpp  Parser.h
ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui.pro
